--- a/index.html
+++ b/index.html
@@ -15,26 +15,48 @@
   </style>
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <div class="container">
+    <img src="" alt="">
+    <div class="text-section">
+      <h1>FAQ</h1>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+      <div class="question">
+        How many team members can I invite?  
+      </div>
+      <div class="answer">
+        You can invite up to 2 additional users on the Free plan. There is no limit on 
+        team members for the Premium plan.  
+      </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+      <div class="question">
+        What is the maximum file upload size?  
+      </div>
+      <div class="answer">
+        No more than 2GB. All files in your account must fit your allotted storage space.  
+      </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+      <div class="question">
+        How do I reset my password? 
+      </div>
+      <div class="answer">
+        Click “Forgot password” from the login page or “Change password” from your profile page.
+        A reset link will be emailed to you.
+      </div>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+      <div class="question">
+        Can I cancel my subscription?  
+      </div>
+      <div class="answer">
+        Yes! Send us a message and we’ll process your request no questions asked.  
+      </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="question">
+        Do you provide additional support?  
+      </div>
+      <div class="answer">
+        Chat and email support is available 24/7. Phone lines are open during normal business hours.  
+      </div>
+    </div>
   </div>
 </body>
 </html>
