--- a/index.html
+++ b/index.html
@@ -8,54 +8,57 @@
   
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
   <div class="container">
     <img src="" alt="">
     <div class="text-section">
       <h1>FAQ</h1>
-
-      <div class="question">
-        How many team members can I invite?  
-      </div>
-      <div class="answer">
-        You can invite up to 2 additional users on the Free plan. There is no limit on 
-        team members for the Premium plan.  
-      </div>
-
-      <div class="question">
-        What is the maximum file upload size?  
-      </div>
-      <div class="answer">
-        No more than 2GB. All files in your account must fit your allotted storage space.  
-      </div>
-
-      <div class="question">
-        How do I reset my password? 
-      </div>
-      <div class="answer">
-        Click “Forgot password” from the login page or “Change password” from your profile page.
-        A reset link will be emailed to you.
-      </div>
-
-      <div class="question">
-        Can I cancel my subscription?  
-      </div>
-      <div class="answer">
-        Yes! Send us a message and we’ll process your request no questions asked.  
-      </div>
-
-      <div class="question">
-        Do you provide additional support?  
-      </div>
-      <div class="answer">
-        Chat and email support is available 24/7. Phone lines are open during normal business hours.  
-      </div>
+      <ul class="faq-section">
+        <li class="accordion">
+          <div class="question">
+            How many team members can I invite?  
+          </div>
+          <div class="answer">
+            You can invite up to 2 additional users on the Free plan. There is no limit on 
+            team members for the Premium plan.  
+          </div>          
+        </li>
+        <li class="accordion">
+          <div class="question">
+            What is the maximum file upload size?  
+          </div>
+          <div class="answer">
+            No more than 2GB. All files in your account must fit your allotted storage space.  
+          </div>          
+        </li>
+        <li class="accordion">
+          <div class="question">
+            How do I reset my password? 
+          </div>
+          <div class="answer">
+            Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.
+          </div>          
+        </li>
+        <li class="accordion">
+          <div class="question">
+            Can I cancel my subscription?  
+          </div>
+          <div class="answer">
+            Yes! Send us a message and we’ll process your request no questions asked.  
+          </div>
+        </li>
+        <li class="accordion">
+          <div class="question">
+            Do you provide additional support?  
+          </div>
+          <div class="answer">
+            Chat and email support is available 24/7. Phone lines are open during normal business hours.  
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
 </body>
