--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="" alt="">
+    <img src="/images/illustration-box-desktop.svg" alt="Box Illustration">
     <div class="text-section">
       <h1>FAQ</h1>
       <ul class="faq-section">
