accordion logic in script.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
   <link rel="stylesheet" href="style.css" class="css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
