start mobile layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
   <div class="container">
-    <img src="/images/illustration-box-desktop.svg" alt="Box Illustration">
+    <img class="img-mobile" src="/images/illustration-woman-online-mobile.svg" alt="Woman Online">
+    <img class="img-desktop" src="/images/illustration-box-desktop.svg" alt="Box Illustration">
     <div class="text-section">
       <h1>FAQ</h1>
       <ul class="faq-section">
